update to use new deafrica logo

--- a/deafrica-data/index.html
+++ b/deafrica-data/index.html
@@ -23,15 +23,15 @@
 	<link rel="stylesheet" href="website/css/skeleton.css">
 	<link rel="stylesheet" href="website/ga.css">
 	<style>
-			
-			
+
+
 	</style>
 
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<link rel="icon" type="image/x-icon" href="website/images/dea-favicon.ico">
-	
+	<link rel="icon" type="image/x-icon" href="website/images/deafrica-favicon.ico">
+
 	<!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -45,10 +45,10 @@
 		<div class="row">
 				<div class="twelve columns u-max-full-width">
 					<a href="http://www.ga.gov.au/">
-						<img src="website/images/geoscience_stacked.jpg" alt="GA and DEA Logo" height="100" />
+						<img src="website/images/geoscience_stacked.jpg" alt="GA and DEAFrica Logo" height="100" />
 					</a>
 					<a href="http://www.ga.gov.au/dea">
-						<img src="website/images/dea_stacked.jpg" alt="GA and DEA Logo" height="100" />
+						<img src="website/images/deafrica-logo-inline.svg" alt="GA and DEAFrica Logo" height="100" />
 					</a>
 				</div>
 		</div>
@@ -81,7 +81,7 @@
 				<p>This bucket is updated with new data frequently, please consult the <a href="/CHANGELOG.txt">CHANGELOG</a> for a list of changes.</p>
 				<!-- obfuscated email to dodge spambots
 				–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-				<h4>Feedback</h4> 
+				<h4>Feedback</h4>
 				<p>Please contact us with any feedback or questions <a href='mai&#108;to&#58;ea%7&#50;th%2E&#111;b&#115;&#101;rv%&#54;1&#116;i&#111;n&#64;&#103;a&#46;go&#118;&#46;%&#54;1u'>ea&#114;&#116;h&#46;&#111;bse&#114;&#118;&#97;tion&#64;ga&#46;&#103;&#111;v&#46;&#97;&#117;</a></p>
 			</div>
 		</div>
